# idiomatic-rust-performance

./: Cargo.toml  README.md
benches/: count_cmp.rs  listfmt_cmp.rs  mapinsert_cmp.rs  vecmap_cmp.rs
